--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.12",
     "@fortawesome/react-fontawesome": "^0.0.19",
     "classnames": "^2.2.5",
+    "human-interval": "^0.1.6",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.3",
     "prettyjson": "^1.2.1",
