--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.12",
     "@fortawesome/react-fontawesome": "^0.0.19",
     "classnames": "^2.2.5",
+    "cors-anywhere": "^0.4.1",
+    "express": "^4.16.3",
     "human-interval": "^0.1.6",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.3",
