--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.0.19",
     "classnames": "^2.2.5",
     "cors-anywhere": "^0.4.1",
+    "date-fns": "^1.29.0",
     "express": "^4.16.3",
     "human-interval": "^0.1.6",
     "node-sass-chokidar": "^1.2.2",
