--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.7",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.12",
     "@fortawesome/react-fontawesome": "^0.0.19",
+    "chart.js": "^2.7.2",
     "classnames": "^2.2.5",
     "cors-anywhere": "^0.4.1",
     "date-fns": "^1.29.0",
     "express": "^4.16.3",
     "human-interval": "^0.1.6",
+    "lodash": "^4.17.10",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.3",
     "prettyjson": "^1.2.1",
     "react": "^16.3.2",
+    "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4"
   },
