--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.3",
     "prettyjson": "^1.2.1",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.3.2",
